--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jinja2>=3.1.6",
+    "numpy>=2.3.2",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
+    "tenacity>=9.1.2",
     "tqdm>=4.67.1",
+    "zarr>=3.1.1",
 ]
