--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
 [project]
-name = "py-probe2gene"
+name = "py_probe_mapper"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.12.15",
+    "huggingface-hub>=0.34.4",
     "jinja2>=3.1.6",
     "numpy>=2.3.2",
+    "pandas>=2.3.1",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "tenacity>=9.1.2",
